fix: frontend gaps

--- a/frontend/index.css
+++ b/frontend/index.css
@@ -3,6 +3,6 @@
 @tailwind utilities;
 
 /* Target the scrollbar */
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
   display: none;
-}
+} */
